--- a/Slash_Android/app/src/main/res/values/strings.xml
+++ b/Slash_Android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Slash_Android</string>
+    <string name="title_activity_authentication">AuthenticationActivity</string>
 </resources>
