--- a/Slash_Android/app/src/main/res/values/strings.xml
+++ b/Slash_Android/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="search">Search</string>
     <string name="offline">No internet connection</string>
     <string name="sign_in_alert">Email/password can\'t be empty</string>
+    <string name="sign_up">Sign up</string>
+    <string name="login">Login</string>
+    <string name="email_id">Email Id</string>
+    <string name="login_signup">Login or sign up to continue!</string>
+    <string name="password_mismatch">Passwords do not match!</string>
 </resources>
