--- a/Slash_Android/app/src/main/res/values/strings.xml
+++ b/Slash_Android/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="search">Search</string>
     <string name="offline">No internet connection</string>
     <string name="sign_in_alert">Email/password can\'t be empty</string>
+    <string name="no_items_found">No items found</string>
+    <string name="add_to_wishlist">Add to wishlist</string>
+    <string name="wishlist">Wishlist</string>
+    <string name="explore">Explore</string>
 </resources>
