--- a/Slash_Android/app/src/main/res/values/strings.xml
+++ b/Slash_Android/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="sign_in_alert">Email/password can\'t be empty</string>
     <string name="no_items_found">No items found</string>
     <string name="add_to_wishlist">Add to wishlist</string>
+    <string name="remove_from_wishlist">Remove</string>
     <string name="wishlist">Wishlist</string>
     <string name="explore">Explore</string>
     <string name="sign_up">Sign Up</string>
@@ -18,4 +19,5 @@
     <string name="Confirm_password">Confirm Password</string>
     <string name="login_signup">Login or Sign Up to Continue!</string>
     <string name="password_mismatch">Passwords do not Match!</string>
+    <string name="product_remove_success">Product removed successfully</string>
 </resources>
